css/style.css
@import url("https://bootswatch.com/flatly/bootstrap.min.css");

* {
  font-family: 'Montserrat', sans-serif;
}

body, html, .row {
  height: 100%;
  overflow: hidden;
}

#nearby-count {
  margin-left: 0.2em;
}

.navbar-brand {
  position: absolute;
  left: 43vw;
  top: 4px;
}

body {
  overflow:hidden
}

.text-center {
  padding-top: 20px;
}

.col-xs-12 {
  background-color: #fff;
}


.page-container {
  max-height: 95%;
}

#sidebar {
  position: absolute;
  height: 100%;
  padding-top: 20px;
  padding-right: 0.8em;
  padding-left: 0.8em;
  left: 0;
  width: 23vw;
  background-color: #f8f8f8;
  z-index: 9;
  overflow: scroll;
}

#sidebar .nav {
  width: 95%;
}

#sidebar li {
  border:0 #f2f2f2 solid;
}

#map {
    width: 100%;
    height: 100%;
    margin-left: 23vw;
    background-image: url('https://miro.medium.com/max/4064/1*qYUvh-EtES8dtgKiBRiLsA.png');
}

.row {
    margin: 0px !important;
}

/* collapsed sidebar styles */
@media screen and (max-width:900px) {
  .row-offcanvas {
    position: relative;
    -webkit-transition: all 0.25s ease-out;
    -moz-transition: all 0.25s ease-out;
    transition: all 0.25s ease-out;
  }
  .row-offcanvas-right .sidebar-offcanvas {
    right: -80% !important;
  }
  .row-offcanvas-left .sidebar-offcanvas {
    left: -80% !important;
  }
  .row-offcanvas-right.active {
    right: 80% !important;
  }
  .row-offcanvas-left.active {
    left: 80% !important;
  }
  .sidebar-offcanvas {
    position: absolute;
    top: 0;
    width: 80% !important;
  }
  
  .navbar-toggle {
    visibility: hidden;
    width: 0px;
    }

  /* The map needs to shift a bit */
  #map {
      position: relative !important;
      margin-left: 0px;
  }

  #map.active{
      position: absolute !important;
      left: -80%;
  }
  .navbar-right img{
    width: 30px;
    height: 30px;
    cursor: pointer;
  }
  #hamburger{
    width:30px;
    height:30px;
    cursor: pointer;
  }
  #btn-add{
    cursor:pointer;
  }

  /* collapsed sidebar styles */
  @media screen and (max-width:900px) {
    .navbar-toggle {
        visibility: visible;
        width: auto;
    }

    .navbar-brand {
      left: 35vw;
    }

    .row-offcanvas {
      position: relative;
      -webkit-transition: all 0.25s ease-out;
      -moz-transition: all 0.25s ease-out;
      transition: all 0.25s ease-out;
    }
    .row-offcanvas-right
    .sidebar-offcanvas {
      right: -80% !important;
    }
  
    .row-offcanvas-left
    .sidebar-offcanvas {
      left: -80% !important;
    }
    .row-offcanvas-right.active {
      right: 80% !important;
    }
    .row-offcanvas-left.active {
      left: 80% !important;
    }
    .sidebar-offcanvas {
      position: absolute;
      top: 0;
      width: 80% !important;
    }
    #sidebar {
      padding-top: 0;
    }

    #map {
        position: relative !important;
        margin-left: 0px;
    }

/* Change the sizes a bit on medium width screens */
  @media screen and (max-width:1100px) and (min-width:901px) {
    #sidebar {
      width: 35vw;
    }
}

